--- a/registry/src/main/resources/application.properties
+++ b/registry/src/main/resources/application.properties
@@ -5,3 +5,9 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+# Lösungen für Problem: EMERGENCY! EUREKA MAY BE INCORRECTLY CLAIMING INSTANCES ARE UP WHEN THEY'RE NOT. RENEWALS ARE LESSER THAN THRESHOLD AND HENCE THE INSTANCES ARE NOT BEING EXPIRED JUST TO BE SAFE
+# https://stackoverflow.com/a/61927348/1364368
+eureka.renewalPercentThreshold=0.85
+eureka.server.enableSelfPreservation=false
+# laut https://github.com/spring-cloud/spring-cloud-netflix/issues/1195#issuecomment-246288151
+# verschwindet diese Warnung sobald der erste Client sich registriert hat
