--- a/emailscore/pom.xml
+++ b/emailscore/pom.xml
@@ -11,29 +11,25 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
-    
     </parent>
+    
     <groupId>de.eldecker.spring.emailchecker</groupId>
-    <artifactId>registry</artifactId>
+    <artifactId>emailscore</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    
-    <name>EmailChecker-EurekaRegistry</name>
-    <description>Eureka-Registry für Email-Checker</description>
-    
+
     <properties>
-        <java.version>23</java.version>
+        <java.version>21</java.version>
+        <spring-cloud.version>2024.0.0</spring-cloud.version>
     </properties>
-    
+
     <dependencies>
-    
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
         <dependency>
@@ -41,21 +37,18 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <dependencyManagement>
-    
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-parent</artifactId>
-                <version>2024.0.0</version>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
-        
     </dependencyManagement>
 
     <build>
