Actuator für Spam-Score-API konfiguriert

--- a/emailscore/src/main/resources/application.properties
+++ b/emailscore/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=Email-Score
+
+spring.application.name=Email-Spam-Score
+
+
+# Server auf zufälligem Port starten
+#server.port=0
+
+spring.application.name=spring-cloud-eureka-client
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=false
+
+# Heartbeat-Signal an Eureka-Server alle n Sekunden schicken
+eureka.instance.lease-renewal-interval-in-seconds=7
+
+# Konfigurationen für Actuator-Endpoint
+management.endpoints.web.exposure.include=info,health
+info.app.name=Email-SPAM-Score
+info.app.description=REST-API fuer Abfrage Email-Spam-Score
+info.app.version=1.0.0
+management.info.env.enabled=true
