--- a/registry/src/main/resources/application.properties
+++ b/registry/src/main/resources/application.properties
@@ -12,3 +12,11 @@ eureka.renewalPercentThreshold=0.85
 eureka.server.enableSelfPreservation=false
 # laut https://github.com/spring-cloud/spring-cloud-netflix/issues/1195#issuecomment-246288151
 # verschwindet diese Warnung sobald der erste Client sich registriert hat
+
+# Zeitspanne in Millisekunden, in der ein Client einen Heartbeat gesendet haben muss,
+# damit er noch als "erreichbar" geführt wird.
+eureka.server.eviction-interval-timer-in-ms=11000
+# Immer wenn der "Evictor" läuft, wird von Klasse AbstractInstanceRegistry
+# eine Nachricht "Running the evict task" ins Log geschrieben.
+# Es wird dabei eine compensationTime genannt, die die Verspätung der
+# Ausführung des Tasks ausgleichen soll.
