--- a/emailscore/pom.xml
+++ b/emailscore/pom.xml
@@ -23,6 +23,7 @@
     </properties>
 
     <dependencies>
+	
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -31,6 +32,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
