--- a/emailscore/src/main/resources/application.properties
+++ b/emailscore/src/main/resources/application.properties
@@ -5,12 +5,17 @@ spring.application.name=Email-Spam-Score
 # Server auf zufälligem Port starten
 #server.port=0
 
-spring.application.name=spring-cloud-eureka-client
+spring.application.name=Spam-Score-REST-API
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=false
 
 # Heartbeat-Signal an Eureka-Server alle n Sekunden schicken
 eureka.instance.lease-renewal-interval-in-seconds=7
+
+logging.level.com.netflix.discovery.DiscoveryClient=DEBUG
+# Damit Logger für Klasse DiscoveryClient beim Senden jedes Heartbeat-Signals
+# eine Nachricht in die Log-Datei schreibt: ... Heartbeat Status 200
+
 
 # Konfigurationen für Actuator-Endpoint
 management.endpoints.web.exposure.include=info,health
