Durchstich: REST-Controller von Frontend kann Spam-Score von REST-Controller abrufen

--- a/emailscore/src/main/resources/application.properties
+++ b/emailscore/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 
-spring.application.name=Email-Spam-Score
+spring.application.name=spam-score-api
 
 
 # Server auf zufälligem Port starten
 #server.port=0
 
-spring.application.name=Spam-Score-REST-API
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=false
 
 # Heartbeat-Signal an Eureka-Server alle n Sekunden schicken
@@ -19,7 +18,9 @@ logging.level.com.netflix.discovery.DiscoveryClient=DEBUG
 
 # Konfigurationen für Actuator-Endpoint
 management.endpoints.web.exposure.include=info,health
-info.app.name=Email-SPAM-Score
+management.info.env.enabled=true
+
+# Die folgenden Attribute können unter http://localhost:8010/actuator/info abgerufen werden
+info.app.name=Email-Spam-Score
 info.app.description=REST-API fuer Abfrage Email-Spam-Score
 info.app.version=1.0.0
-management.info.env.enabled=true
