--- a/registry/src/main/resources/application.properties
+++ b/registry/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.application.name=Eureka-Registry für Email-Checker
+spring.application.name=Email-Checker: Eureka Registry
 
 server.port=8761
 eureka.client.register-with-eureka=false
