--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=Email-Checker-Frontend
+
+spring.application.name=Email-Checker: Frontend
+
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
