Neue Klasse: InstanzenFinder; maven_*.bat fuer registry/ und frontend/ dazu

--- a/registry/src/main/resources/application.properties
+++ b/registry/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.application.name=Email-Checker: Eureka Registry
+spring.application.name=eureka-service-registry-for-email-checker
 
 server.port=8761
 eureka.client.register-with-eureka=false
