--- a/frontend/src/main/resources/application.properties
+++ b/frontend/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 
-spring.application.name=Email-Checker: Frontend
+spring.application.name=email-checker-frontend
 
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
+
+# Die Anwendung soll sich nicht selbst beim Eureka-Server als Service registrieren,
+# sie will nur verfügbare Service-Instanzen von client-seitiges Load Balancing abfragen.
+eureka.client.register-with-eureka=false
