Spam-Score: EmailAdressenProtokoll dazu

--- a/spamscore/src/main/resources/application.properties
+++ b/spamscore/src/main/resources/application.properties
@@ -10,6 +10,7 @@ eureka.instance.preferIpAddress=false
 
 # Heartbeat-Signal an Eureka-Server alle n Sekunden schicken
 eureka.instance.lease-renewal-interval-in-seconds=7
+eureka.instance.lease-expiration-duration-in-seconds=10
 
 logging.level.com.netflix.discovery.DiscoveryClient=DEBUG
 # Damit Logger für Klasse DiscoveryClient beim Senden jedes Heartbeat-Signals
