frontend: Auswahl Spam-Score-Instanz selbst implementiert (Abfrage EurekaClient)

--- a/3_frontend/src/main/resources/application.properties
+++ b/3_frontend/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=email-checker-frontend
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
+eureka.client.registry-fetch-interval-seconds=3
 
 # Die Anwendung soll sich nicht selbst beim Eureka-Server als Service registrieren,
 # sie will nur verfügbare Service-Instanzen von client-seitiges Load Balancing abfragen.
