Spam-Score: Kann jetzt ueber Actuator-Endpunkt heruntergefahren werden

--- a/2_spamscore/src/main/resources/application.properties
+++ b/2_spamscore/src/main/resources/application.properties
@@ -18,8 +18,21 @@ logging.level.com.netflix.discovery.DiscoveryClient=DEBUG
 
 
 # Konfigurationen für Actuator-Endpoint
-management.endpoints.web.exposure.include=info,health
+management.endpoints.web.exposure.include=info,health,shutdown
 management.info.env.enabled=true
+
+# Acutator-Endpoint zum Herunterfahren der Anwendung
+# "shutdown" muss auch in Liste management.endpoints.web.exposure.include enthalten sein
+management.endpoint.shutdown.enabled=true
+# HTTP-POST-Request an: 
+#       http://localhost:8010/actuator/shutdown
+#       http://localhost:8020/actuator/shutdown
+# Z.B. mit CURL:
+#       curl -X POST http://localhost:8010/actuator/shutdown
+#       curl -X POST http://localhost:8020/actuator/shutdown
+# Siehe auch Datei TalendApiTester_ShutdownRequests.json mit Requests für den "Talend API Tester".
+# Bei Shutdown über dieses Endpunkt meldet sich die Anwendung beim Eureka-Server ab.
+
 
 # Die folgenden Attribute können unter http://localhost:8010/actuator/info abgerufen werden
 info.app.name=Email-Spam-Score
