--- a/2_spamscore/src/main/resources/application.properties
+++ b/2_spamscore/src/main/resources/application.properties
@@ -24,7 +24,7 @@ management.info.env.enabled=true
 # Acutator-Endpoint zum Herunterfahren der Anwendung
 # "shutdown" muss auch in Liste management.endpoints.web.exposure.include enthalten sein
 management.endpoint.shutdown.enabled=true
-# HTTP-POST-Request an: 
+# HTTP-POST-Request an:
 #       http://localhost:8010/actuator/shutdown
 #       http://localhost:8020/actuator/shutdown
 # Z.B. mit CURL:
@@ -38,3 +38,4 @@ management.endpoint.shutdown.enabled=true
 info.app.name=Email-Spam-Score
 info.app.description=REST-API fuer Abfrage Email-Spam-Score
 info.app.version=1.0.0
+info.app.hinweis=Diese Anwendung immer mit Actuator-Endpunkt herunterfahren
